# reader-be

./: .dockerignore  .gitignore  AUTHENTICATION_FEATURES.md  Dockerfile  FRONTEND_REDIRECT_GUIDE.md  GOOGLE_OAUTH_FRONTEND_SETUP.md  GOOGLE_OAUTH_SETUP.md  OAUTH_FIXES_SUMMARY.md  OAUTH_RATE_LIMITING_FIX.md  OAUTH_REDIRECT_FIX.md  PROJECT_REORGANIZATION.md  README.md  SUMMARY.md  SUPABASE_MIGRATION.md  SUPABASE_SETUP_GUIDE.md  debug_user.py  docker-compose.yml  env.example  fix_oauth_issues.py  main.py  pyproject.toml  test_callback.py  test_frontend_redirect.py  test_oauth_flow.py  test_oauth_real_flow.py  test_oauth_with_delay.py
app/core/: auth.py  config.py  database.py
app/models/: __init__.py  chapter.py  novel.py  user.py
app/schemas/: __init__.py  auth.py  chapter.py  common.py  novel.py  oauth.py  reading.py  user.py
app/services/: __init__.py  auth_service.py  cache_service.py  chapter_service.py  epub_service.py  markdown_service.py  novel_service.py  (+6 more)
docs/: README.md
scripts/: check_users.py  create_admin.py  create_admin_direct.py  create_user_profile.py  fix_database.py  migrate_storage_structure.py  test_admin.py  test_admin_api.py  test_cache.py  test_epub_upload.py  test_storage_operations.py  test_user_service.py  test_user_service_direct.py
sql/: README.md  add_role_column.sql  fix_rls_policies.sql  setup_supabase.sql
tests/: README.md  __init__.py  demo.py  test_api.py  test_auth.py  test_auth_simple.py  test_email_check.py  test_oauth.py  test_oauth_debug.py  test_oauth_frontend.py  test_oauth_real.py  test_supabase.py  test_user_api.py
(+26 files in other folders)
